--- a/maven.teste/pom.xml
+++ b/maven.teste/pom.xml
@@ -4,10 +4,20 @@
   <artifactId>maven.teste</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.2.16</version>
-		</dependency>
-	</dependencies>
+	<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<version>42.2.16</version>
+	</dependency>
+	<dependency>
+      <groupId>com.sparkjava</groupId>
+      <artifactId>spark-core</artifactId>
+      <version>2.9.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.21</version>
+   	</dependency>
+</dependencies>
 </project>
